feat: add new demo components for pagination and progress with circle variants

--- a/app/pagination/@dev/page.mdx
+++ b/app/pagination/@dev/page.mdx
@@ -36,11 +36,11 @@ import TableOfContents from '@components/doc/TableOfContents';
 
 ### Pagination component
 
-<CodePreview paths={['pagination', 'CustomPagination']}>
-  <Demo.CustomPagination totalPage={5} />
+<CodePreview paths={['pagination', 'CustomPaginationTotal5']}>
+  <Demo.CustomPaginationTotal5 />
 </CodePreview>
-<CodePreview paths={['pagination', 'CustomPagination']}>
-  <Demo.CustomPagination component='a' totalPage={5} />
+<CodePreview paths={['pagination', 'CustomPaginationComponentA']}>
+  <Demo.CustomPaginationComponentA />
 </CodePreview>
 
 ### Pagination siblings
