--- a/app/progress/@spec/page.mdx
+++ b/app/progress/@spec/page.mdx
@@ -27,19 +27,43 @@ A component that organizes content into vertically stacked collapsible and expan
 
 ## Anatomy <span id="anatomy"></span>
 
-{/* Anatomy specification */}
+- **Track**: The background bar representing the total progress range.
+- **Indicator/Bar**: The filled portion of the track showing current progress.
+- **Label (optional)**: Text label describing the progress or its context.
+- **Value display (optional)**: Numeric or percentage value of progress, shown as text.
+- **Icon (optional)**: Icon indicating status (e.g., success, error, loading).
 
 ## States <span id="states"></span>
 
-{/* States specification */}
+- **Default**: Standard appearance, shows current progress.
+- **Indeterminate**: Animated indicator when progress value is unknown.
+- **Complete**: Full bar and optional success indicator when progress reaches 100%.
+- **Error**: Error state with warning color and optional error icon.
+- **Disabled**: Visually muted and non-interactive.
+- **Active/Animated**: Animated bar for ongoing progress.
 
 ## Options <span id="options"></span>
 
-{/* Options specification */}
+- **value**: Current progress value (number or percentage).
+- **max**: Maximum value for the progress range.
+- **label**: Optional label describing the progress.
+- **showValue**: Show numeric or percentage value.
+- **indeterminate**: Show indeterminate/animated state.
+- **status**: Status indicator (e.g., success, error).
+- **size**: Size of the progress bar (e.g., small, medium, large).
+- **theme**: Theme (`default`, `alternative`).
+- **icon**: Optional icon for status.
+- **className**: Custom class names for styling.
+- **disabled**: Disable the progress bar.
 
 ## Behaviors <span id="behaviors"></span>
 
-{/* Behaviors specification */}
+- **Progress update**: Bar fills according to the `value` prop.
+- **Indeterminate animation**: Shows animated bar when progress is unknown.
+- **Status indication**: Visual feedback for success, error, or ongoing progress.
+- **Accessibility**: Uses ARIA attributes for screen readers (e.g., `aria-valuenow`, `aria-valuemax`).
+- **Label/value display**: Optionally shows label and/or value for context.
+- **Disabled**: Prevents interaction and visually mutes the component.
 
 ## Changelog <span id="changelog"></span>
 
