refactor: simplify navigation in ContentNavigator by using Link component

--- a/app/badge/dev/page.mdx
+++ b/app/badge/dev/page.mdx
@@ -1,7 +1,7 @@
 import * as Demo from '@public/demo/badge';
 import CodePreview from '@components/showcase/CodePreview';
 
-## Outlined (default)
+## Outlined
 
 <CodePreview paths={['badge', 'OutlinedBadge']}>
   <Demo.OutlinedBadge />
