--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,3 +1,5 @@
+<main className="prose flex min-h-screen w-full flex-col gap-8 p-8 sm:px-12 md:px-24 2xl:px-48">
+
 # Changelog
 
 ## Version 0.2.0:
@@ -108,3 +110,5 @@
 - Accordion: core
 - Bagde: core
 - Button: core
+
+</main>
