--- a/app/color/dev/page.mdx
+++ b/app/color/dev/page.mdx
@@ -37,37 +37,37 @@ Tokens follow the structure:
 
 ## Background Tokens
 
-| Token Name                                                        | Light Value              | Dark Value               | Description                         |
-| ----------------------------------------------------------------- | ------------------------ | ------------------------ | ----------------------------------- |
-| `--par-color-bg`                                                  | `rgba(255,255,255,1)`    | `rgba(22,22,22,1)`       | Main background                     |
-| `--par-color-bg-alternative`                                      | `rgba(247,247,247,1)`    | `rgba(38,38,38,1)`       | Alternative background              |
-| `--par-color-bg-surface`                                          | `rgba(247,247,247,1)`    | `rgba(38,38,38,1)`       | Surface background                  |
-| `--par-color-bg-surface-inverse`                                  | `rgba(22,22,22,1)`       | `rgba(255,255,255,1)`    | Inverse surface background          |
-| `--par-color-bg-surface-alternative`                              | `rgba(255,255,255,1)`    | `rgba(57,57,57,1)`       | Alternative surface background      |
-| `--par-color-bg-surface-indicator-neutral`                        | `var(--par-neutral-500)` | `var(--par-neutral-500)` | Neutral indicator background        |
-| `--par-color-bg-surface-indicator-accent`                         | `var(--par-accent-500)`  | `var(--par-accent-500)`  | Accent indicator background         |
-| `--par-color-bg-surface-item-enabled`                             | `rgba(0,0,0,0)`          | `rgba(0,0,0,0)`          | Enabled item background             |
-| `--par-color-bg-surface-item-hovered`                             | `rgba(227,227,227,0.5)`  | `rgba(95,95,95,0.5)`     | Hovered item background             |
-| `--par-color-bg-surface-item-neutral-subtle-selected`             | `rgba(227,227,227,1)`    | `rgba(203,203,203,0.5)`  | Subtle selected neutral item        |
-| `--par-color-bg-surface-item-neutral-subtle-selected-hovered`     | `rgba(203,203,203,1)`    | `rgba(171,171,171,0.5)`  | Subtle selected neutral hovered     |
-| `--par-color-bg-surface-item-neutral-pronounced-selected`         | `rgba(38,38,38,1)`       | `rgba(241,241,241,1)`    | Pronounced selected neutral item    |
-| `--par-color-bg-surface-item-neutral-pronounced-selected-hovered` | `rgba(57,57,57,1)`       | `rgba(227,227,227,1)`    | Pronounced selected neutral hovered |
-| `--par-color-bg-surface-item-accent-subtle-selected`              | `rgba(212,229,255,1)`    | `rgba(203,203,203,0.5)`  | Subtle selected accent item         |
-| `--par-color-bg-surface-item-accent-subtle-selected-hovered`      | `rgba(172,205,255,1)`    | `rgba(171,171,171,0.5)`  | Subtle selected accent hovered      |
-| `--par-color-bg-surface-item-accent-pronounced-selected`          | `rgba(20,122,255,1)`     | `rgba(20,122,255,1)`     | Pronounced selected accent item     |
-| `--par-color-bg-surface-item-accent-pronounced-selected-hovered`  | `rgba(15,95,192,1)`      | `rgba(15,95,192,1)`      | Pronounced selected accent hovered  |
-| `--par-color-bg-field-enabled`                                    | `rgba(247,247,247,1)`    | `rgba(38,38,38,1)`       | Enabled field background            |
-| `--par-color-bg-field-alternative-enabled`                        | `rgba(255,255,255,1)`    | `rgba(57,57,57,1)`       | Alternative enabled field bg        |
-| `--par-color-bg-field-hovered`                                    | `rgba(241,241,241,1)`    | `rgba(57,57,57,1)`       | Hovered field background            |
-| `--par-color-bg-field-alternative-hovered`                        | `rgba(241,241,241,1)`    | `rgba(95,95,95,1)`       | Alternative hovered field bg        |
-| `--par-color-bg-field-disabled`                                   | `rgba(247,247,247,0.5)`  | `rgba(38,38,38,0.5)`     | Disabled field background           |
-| `--par-color-bg-field-alternative-disabled`                       | `rgba(255,255,255,0.5)`  | `rgba(57,57,57,0.5)`     | Alt disabled field background       |
-| `--par-color-bg-field-readonly`                                   | `rgba(241,241,241,1)`    | `rgba(57,57,57,1)`       | Readonly field background           |
-| `--par-color-bg-field-invalid`                                    | `rgba(255,238,236,1)`    | `rgba(77,3,10,1)`        | Invalid field background            |
-| `--par-color-bg-field-button-enabled`                             | `rgba(0,0,0,0)`          | `rgba(0,0,0,0)`          | Enabled field button background     |
-| `--par-color-bg-field-button-hovered`                             | `rgba(227,227,227,0.5)`  | `rgba(95,95,95,0.5)`     | Hovered field button background     |
-| `--par-color-bg-field-button-pressed`                             | `rgba(171,171,171,0.5)`  | `rgba(107,107,107,0.5)`  | Pressed field button background     |
-| `--par-color-bg-field-button-disabled`                            | `rgba(0,0,0,0)`          | `rgba(0,0,0,0)`          | Disabled field button background    |
+| Token Name                                                        | Light Value                                    | Dark Value                                     | Description                         |
+| ----------------------------------------------------------------- | ---------------------------------------------- | ---------------------------------------------- | ----------------------------------- |
+| `--par-color-bg`                                                  | `var(--par-neutral-0)`                         | `var(--par-neutral-950)`                       | Main background                     |
+| `--par-color-bg-alternative`                                      | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Alternative background              |
+| `--par-color-bg-surface`                                          | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Surface background                  |
+| `--par-color-bg-surface-inverse`                                  | `var(--par-neutral-950)`                       | `var(--par-neutral-0)`                         | Inverse surface background          |
+| `--par-color-bg-surface-alternative`                              | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative surface background      |
+| `--par-color-bg-surface-indicator-neutral`                        | `var(--par-neutral-500)`                       | `var(--par-neutral-500)`                       | Neutral indicator background        |
+| `--par-color-bg-surface-indicator-accent`                         | `var(--par-accent-500)`                        | `var(--par-accent-500)`                        | Accent indicator background         |
+| `--par-color-bg-surface-item-enabled`                             | `transparent`                                  | `transparent`                                  | Enabled item background             |
+| `--par-color-bg-surface-item-hovered`                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered item background             |
+| `--par-color-bg-surface-item-neutral-subtle-selected`             | `var(--par-neutral-200)`                       | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected neutral item        |
+| `--par-color-bg-surface-item-neutral-subtle-selected-hovered`     | `var(--par-neutral-300)`                       | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected neutral hovered     |
+| `--par-color-bg-surface-item-neutral-pronounced-selected`         | `var(--par-neutral-900)`                       | `var(--par-neutral-100)`                       | Pronounced selected neutral item    |
+| `--par-color-bg-surface-item-neutral-pronounced-selected-hovered` | `var(--par-neutral-800)`                       | `var(--par-neutral-200)`                       | Pronounced selected neutral hovered |
+| `--par-color-bg-surface-item-accent-subtle-selected`              | `var(--par-accent-100)`                        | `rgb(from var(--par-neutral-200) r g b / 0.5)` | Subtle selected accent item         |
+| `--par-color-bg-surface-item-accent-subtle-selected-hovered`      | `var(--par-accent-200)`                        | `rgb(from var(--par-neutral-300) r g b / 0.5)` | Subtle selected accent hovered      |
+| `--par-color-bg-surface-item-accent-pronounced-selected`          | `var(--par-accent-600)`                        | `var(--par-accent-600)`                        | Pronounced selected accent item     |
+| `--par-color-bg-surface-item-accent-pronounced-selected-hovered`  | `var(--par-accent-700)`                        | `var(--par-accent-700)`                        | Pronounced selected accent hovered  |
+| `--par-color-bg-field-enabled`                                    | `var(--par-neutral-50)`                        | `var(--par-neutral-900)`                       | Enabled field background            |
+| `--par-color-bg-field-alternative-enabled`                        | `var(--par-neutral-0)`                         | `var(--par-neutral-800)`                       | Alternative enabled field bg        |
+| `--par-color-bg-field-hovered`                                    | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Hovered field background            |
+| `--par-color-bg-field-alternative-hovered`                        | `var(--par-neutral-100)`                       | `var(--par-neutral-700)`                       | Alternative hovered field bg        |
+| `--par-color-bg-field-disabled`                                   | `rgb(from var(--par-neutral-50) r g b / 0.5)`  | `rgb(from var(--par-neutral-900) r g b / 0.5)` | Disabled field background           |
+| `--par-color-bg-field-alternative-disabled`                       | `rgb(from var(--par-neutral-0) r g b / 0.5)`   | `rgb(from var(--par-neutral-800) r g b / 0.5)` | Alt disabled field background       |
+| `--par-color-bg-field-readonly`                                   | `var(--par-neutral-100)`                       | `var(--par-neutral-800)`                       | Readonly field background           |
+| `--par-color-bg-field-invalid`                                    | `var(--par-adverse-50)`                        | `var(--par-adverse-900)`                       | Invalid field background            |
+| `--par-color-bg-field-button-enabled`                             | `transparent`                                  | `transparent`                                  | Enabled field button background     |
+| `--par-color-bg-field-button-hovered`                             | `rgb(from var(--par-neutral-200) r g b / 0.5)` | `rgb(from var(--par-neutral-700) r g b / 0.5)` | Hovered field button background     |
+| `--par-color-bg-field-button-pressed`                             | `rgb(from var(--par-neutral-300) r g b / 0.5)` | `rgb(from var(--par-neutral-600) r g b / 0.5)` | Pressed field button background     |
+| `--par-color-bg-field-button-disabled`                            | `transparent`                                  | `transparent`                                  | Disabled field button background    |
 
 ---
 
@@ -109,65 +109,65 @@ Tokens follow the structure:
 
 ## Border Tokens
 
-| **Token**                                  | **Light Value**         | **Dark Value**        | **Description**            |
-| ------------------------------------------ | ----------------------- | --------------------- | -------------------------- |
-| **--par-color-focus-ring**                 | `rgba(0,0,0,1)`         | `rgba(255,255,255,1)` | Focus ring                 |
-| **--par-color-border-surface**             | `rgba(227,227,227,1)`   | `rgba(95,95,95,1)`    | Surface border             |
-| **--par-color-border-surface-inverse**     | `rgba(95,95,95,1)`      | `rgba(227,227,227,1)` | Inverse surface border     |
-| **--par-color-border-field-enabled**       | `rgba(227,227,227,1)`   | `rgba(95,95,95,1)`    | Enabled field border       |
-| **--par-color-border-field-alpha-enabled** | `rgba(227,227,227,0.5)` | `rgba(95,95,95,0.5)`  | Alpha enabled field border |
-| **--par-color-border-field-hovered**       | `rgba(203,203,203,1)`   | `rgba(118,118,118,1)` | Hovered field border       |
-| **--par-color-border-field-readonly**      | `rgba(227,227,227,1)`   | `rgba(95,95,95,1)`    | Readonly field border      |
-| **--par-color-border-field-invalid**       | `rgba(219,45,50,1)`     | `rgba(254,219,219,1)` | Invalid field border       |
-| **--par-color-border-field-disabled**      | `rgba(227,227,227,0.5)` | `rgba(95,95,95,0.5)`  | Disabled field border      |
-| **--par-color-border-field-focused**       | `rgba(0,0,0,1)`         | `rgba(255,255,255,1)` | Focused field border       |
-| **--par-outlined-surface-item-focused**    | `rgba(0,0,0,1)`         | `rgba(255,255,255,1)` | Outlined surface focus     |
+| **Token**                                  | **Light Value**              | **Dark Value**               | **Description**            |
+| ------------------------------------------ | ---------------------------- | ---------------------------- | -------------------------- |
+| **--par-color-focus-ring**                 | `var(--par-neutral-950)`     | `var(--par-neutral-0)`       | Focus ring                 |
+| **--par-color-border-surface**             | `var(--par-neutral-200)`     | `var(--par-neutral-700)`     | Surface border             |
+| **--par-color-border-surface-inverse**     | `var(--par-neutral-700)`     | `var(--par-neutral-200)`     | Inverse surface border     |
+| **--par-color-border-field-enabled**       | `var(--par-neutral-200)`     | `var(--par-neutral-700)`     | Enabled field border       |
+| **--par-color-border-field-alpha-enabled** | `var(--par-neutral-200-a50)` | `var(--par-neutral-700-a50)` | Alpha enabled field border |
+| **--par-color-border-field-hovered**       | `var(--par-neutral-300)`     | `var(--par-neutral-600)`     | Hovered field border       |
+| **--par-color-border-field-readonly**      | `var(--par-neutral-200)`     | `var(--par-neutral-700)`     | Readonly field border      |
+| **--par-color-border-field-invalid**       | `var(--par-adverse-500)`     | `var(--par-adverse-100)`     | Invalid field border       |
+| **--par-color-border-field-disabled**      | `var(--par-neutral-200-a50)` | `var(--par-neutral-700-a50)` | Disabled field border      |
+| **--par-color-border-field-focused**       | `var(--par-neutral-950)`     | `var(--par-neutral-0)`       | Focused field border       |
+| **--par-outlined-surface-item-focused**    | `var(--par-neutral-950)`     | `var(--par-neutral-0)`       | Outlined surface focus     |
 
 ---
 
 ## Text & Icon Tokens
 
-| **Token**                                                     | **Light Value**         | **Dark Value**          | **Description**              |
-| ------------------------------------------------------------- | ----------------------- | ----------------------- | ---------------------------- |
-| **--par-color-text-primary**                                  | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Primary text                 |
-| **--par-color-text-primary-disabled**                         | `rgba(22,22,22,0.5)`    | `rgba(255,255,255,0.5)` | Disabled primary text        |
-| **--par-color-text-primary-inverse**                          | `rgba(255,255,255,1)`   | `rgba(22,22,22,1)`      | Inverse primary text         |
-| **--par-color-text-secondary**                                | `rgba(74,74,74,1)`      | `rgba(227,227,227,1)`   | Secondary text               |
-| **--par-color-text-secondary-inverse**                        | `rgba(227,227,227,1)`   | `rgba(74,74,74,1)`      | Inverse secondary text       |
-| **--par-color-text-helper-neutral**                           | `rgba(107,107,107,1)`   | `rgba(227,227,227,1)`   | Neutral helper text          |
-| **--par-color-text-helper-neutral-disabled**                  | `rgba(107,107,107,0.5)` | `rgba(227,227,227,0.5)` | Disabled neutral helper text |
-| **--par-color-text-helper-adverse**                           | `rgba(203,28,43,1)`     | `rgba(254,219,219,1)`   | Adverse helper text          |
-| **--par-color-text-helper-cautionary**                        | `rgba(145,99,0,1)`      | `rgba(244,229,143,1)`   | Cautionary helper text       |
-| **--par-color-text-helper-affirmative**                       | `rgba(34,122,65,1)`     | `rgba(188,240,195,1)`   | Affirmative helper text      |
-| **--par-color-text-helper-info**                              | `rgba(0,105,209,1)`     | `rgba(172,205,255,1)`   | Info helper text             |
-| **--par-color-text-surface-item-enabled**                     | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Enabled surface item text    |
-| **--par-color-text-surface-item-neutral-subtle-selected**     | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Neutral subtle selected text |
-| **--par-color-text-surface-item-neutral-pronounced-selected** | `rgba(255,255,255,1)`   | `rgba(22,22,22,1)`      | Neutral pronounced selected  |
-| **--par-color-text-surface-item-accent-subtle-selected**      | `rgba(22,22,22,1)`      | `rgba(172,205,255,1)`   | Accent subtle selected text  |
-| **--par-color-text-surface-item-accent-pronounced-selected**  | `rgba(255,255,255,1)`   | `rgba(255,255,255,1)`   | Accent pronounced selected   |
-| **--par-color-text-surface-item-disabled**                    | `rgba(22,22,22,0.5)`    | `rgba(255,255,255,0.5)` | Disabled surface item text   |
-| **--par-color-text-field-placeholder**                        | `rgba(95,95,95,1)`      | `rgba(227,227,227,1)`   | Field placeholder text       |
-| **--par-color-text-field-alpha-placeholder**                  | `rgba(95,95,95,0.5)`    | `rgba(227,227,227,0.5)` | Alpha placeholder text       |
-| **--par-color-text-field-alternative-placeholder**            | `rgba(107,107,107,1)`   | `rgba(227,227,227,1)`   | Alt placeholder text         |
-| **--par-color-text-field-filled**                             | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Filled field text            |
-| **--par-color-text-field-label**                              | `rgba(74,74,74,1)`      | `rgba(227,227,227,1)`   | Field label text             |
-| **--par-color-text-field-disabled**                           | `rgba(95,95,95,0.5)`    | `rgba(227,227,227,0.5)` | Disabled field text          |
-| **--par-color-text-field-readonly**                           | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Readonly field text          |
-| **--par-color-text-field-invalid**                            | `rgba(22,22,22,1)`      | `rgba(255,255,255,1)`   | Invalid field text           |
-| **--par-color-text-button**                                   | `rgba(107,107,107,1)`   | `rgba(227,227,227,1)`   | Button text                  |
-| **--par-color-icon-field-button-enabled**                     | `rgba(118,118,118,1)`   | `rgba(227,227,227,1)`   | Enabled field button icon    |
-| **--par-color-icon-field-button-hovered**                     | `rgba(95,95,95,1)`      | `rgba(241,241,241,1)`   | Hovered field button icon    |
-| **--par-color-icon-field-button-pressed**                     | `rgba(74,74,74,1)`      | `rgba(241,241,241,1)`   | Pressed field button icon    |
-| **--par-color-icon-field-button-disabled**                    | `rgba(118,118,118,0.5)` | `rgba(227,227,227,0.5)` | Disabled field button icon   |
+| **Token**                                                     | **Light Value**                                                 | **Dark Value**                                                  | **Description**              |
+| ------------------------------------------------------------- | --------------------------------------------------------------- | --------------------------------------------------------------- | ---------------------------- |
+| **--par-color-text-primary**                                  | `var(--par-gray-950)`                                           | `var(--par-white)`                                              | Primary text                 |
+| **--par-color-text-primary-disabled**                         | `rgb(from var(--par-gray-950) r g b / 0.5)`                     | `rgb(from var(--par-white) r g b / 0.5)`                        | Disabled primary text        |
+| **--par-color-text-primary-inverse**                          | `var(--par-white)`                                              | `var(--par-gray-950)`                                           | Inverse primary text         |
+| **--par-color-text-secondary**                                | `var(--par-gray-700)`                                           | `var(--par-gray-200)`                                           | Secondary text               |
+| **--par-color-text-secondary-inverse**                        | `var(--par-gray-200)`                                           | `var(--par-gray-700)`                                           | Inverse secondary text       |
+| **--par-color-text-helper-neutral**                           | `var(--par-gray-550)`                                           | `var(--par-gray-200)`                                           | Neutral helper text          |
+| **--par-color-text-helper-neutral-disabled**                  | `rgb(from var(--par-gray-550) r g b / 0.5)`                     | `rgb(from var(--par-gray-200) r g b / 0.5)`                     | Disabled neutral helper text |
+| **--par-color-text-helper-adverse**                           | `var(--par-red-550)`                                            | `var(--par-red-200)`                                            | Adverse helper text          |
+| **--par-color-text-helper-cautionary**                        | `var(--par-yellow-550)`                                         | `var(--par-yellow-200)`                                         | Cautionary helper text       |
+| **--par-color-text-helper-affirmative**                       | `var(--par-green-550)`                                          | `var(--par-green-200)`                                          | Affirmative helper text      |
+| **--par-color-text-helper-info**                              | `var(--par-blue-550)`                                           | `var(--par-blue-200)`                                           | Info helper text             |
+| **--par-color-text-surface-item-enabled**                     | `var(--par-color-text-primary)`                                 | `var(--par-color-text-primary)`                                 | Enabled surface item text    |
+| **--par-color-text-surface-item-neutral-subtle-selected**     | `var(--par-color-text-primary)`                                 | `var(--par-color-text-primary)`                                 | Neutral subtle selected text |
+| **--par-color-text-surface-item-neutral-pronounced-selected** | `var(--par-white)`                                              | `var(--par-gray-950)`                                           | Neutral pronounced selected  |
+| **--par-color-text-surface-item-accent-subtle-selected**      | `var(--par-color-text-primary)`                                 | `var(--par-accent-200)`                                         | Accent subtle selected text  |
+| **--par-color-text-surface-item-accent-pronounced-selected**  | `var(--par-white)`                                              | `var(--par-white)`                                              | Accent pronounced selected   |
+| **--par-color-text-surface-item-disabled**                    | `var(--par-color-text-primary-disabled)`                        | `var(--par-color-text-primary-disabled)`                        | Disabled surface item text   |
+| **--par-color-text-field-placeholder**                        | `var(--par-gray-600)`                                           | `var(--par-gray-200)`                                           | Field placeholder text       |
+| **--par-color-text-field-alpha-placeholder**                  | `rgb(from var(--par-gray-600) r g b / 0.5)`                     | `rgb(from var(--par-gray-200) r g b / 0.5)`                     | Alpha placeholder text       |
+| **--par-color-text-field-alternative-placeholder**            | `var(--par-gray-550)`                                           | `var(--par-gray-200)`                                           | Alt placeholder text         |
+| **--par-color-text-field-filled**                             | `var(--par-color-text-primary)`                                 | `var(--par-color-text-primary)`                                 | Filled field text            |
+| **--par-color-text-field-label**                              | `var(--par-color-text-secondary)`                               | `var(--par-color-text-secondary)`                               | Field label text             |
+| **--par-color-text-field-disabled**                           | `rgb(from var(--par-color-text-field-placeholder) r g b / 0.5)` | `rgb(from var(--par-color-text-field-placeholder) r g b / 0.5)` | Disabled field text          |
+| **--par-color-text-field-readonly**                           | `var(--par-color-text-primary)`                                 | `var(--par-color-text-primary)`                                 | Readonly field text          |
+| **--par-color-text-field-invalid**                            | `var(--par-color-text-primary)`                                 | `var(--par-color-text-primary)`                                 | Invalid field text           |
+| **--par-color-text-button**                                   | `var(--par-gray-550)`                                           | `var(--par-gray-200)`                                           | Button text                  |
+| **--par-color-icon-field-button-enabled**                     | `var(--par-gray-500)`                                           | `var(--par-gray-200)`                                           | Enabled field button icon    |
+| **--par-color-icon-field-button-hovered**                     | `var(--par-gray-600)`                                           | `var(--par-gray-100)`                                           | Hovered field button icon    |
+| **--par-color-icon-field-button-pressed**                     | `var(--par-gray-700)`                                           | `var(--par-gray-100)`                                           | Pressed field button icon    |
+| **--par-color-icon-field-button-disabled**                    | `rgb(from var(--par-gray-500) r g b / 0.5)`                     | `rgb(from var(--par-gray-200) r g b / 0.5)`                     | Disabled field button icon   |
 
 ---
 
 ## Effect Tokens
 
-| **Token**                            | **Light Value**    | **Dark Value**          | **Description**    |
-| ------------------------------------ | ------------------ | ----------------------- | ------------------ |
-| **--par-color-ring-visible-focused** | `rgba(22,22,22,1)` | `rgba(255,255,255,1)`   | Focus ring outline |
-| **--par-color-effect-shadow**        | `rgba(0,0,0,0.1)`  | `rgba(255,255,255,0.1)` | Shadow effect      |
+| **Token**                            | **Light Value**       | **Dark Value**          | **Description**    |
+| ------------------------------------ | --------------------- | ----------------------- | ------------------ |
+| **--par-color-ring-visible-focused** | `var(--par-gray-950)` | `var(--par-white)`      | Focus ring outline |
+| **--par-color-effect-shadow**        | `rgba(0,0,0,0.1)`     | `rgba(255,255,255,0.1)` | Shadow effect      |
 
 ---
 
@@ -175,17 +175,17 @@ Tokens follow the structure:
 
 Below is the full palette used for overrides (see `colorPalette.ts`):
 
-| **Name**   | **Example Value(s) (Light, rgba)**                |
-| ---------- | ------------------------------------------------- |
-| **gray**   | `rgba(141,141,141,1)`, `rgba(247,247,247,1)`, ... |
-| **orange** | `rgba(255,87,21,1)`, `rgba(254,245,240,1)`, ...   |
-| **blue**   | `rgba(20,122,255,1)`, `rgba(243,248,255,1)`, ...  |
-| **lime**   | `rgba(130,186,80,1)`, `rgba(242,250,236,1)`, ...  |
-| **violet** | `rgba(136,74,206,1)`, `rgba(249,246,254,1)`, ...  |
-| **cyan**   | `rgba(90,180,233,1)`, `rgba(241,249,254,1)`, ...  |
-| **red**    | `rgba(214,46,66,1)`, `rgba(254,245,243,1)`, ...   |
-| **yellow** | `rgba(255,188,5,1)`, `rgba(249,247,240,1)`, ...   |
-| **green**  | `rgba(57,172,86,1)`, `rgba(238,251,239,1)`, ...   |
+| **Name**   | **Tokens (Light)**                                                                                                                                                                                                                          |
+| ---------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **gray**   | `--par-gray-0`, `--par-gray-50`, `--par-gray-100`, `--par-gray-200`, `--par-gray-300`, `--par-gray-400`, `--par-gray-500`, `--par-gray-550`, `--par-gray-600`, `--par-gray-700`, `--par-gray-800`, `--par-gray-900`, `--par-gray-950`       |
+| **orange** | `--par-orange-0`, `--par-orange-50`, `--par-orange-100`, `--par-orange-200`, `--par-orange-300`, `--par-orange-400`, `--par-orange-500`, `--par-orange-600`, `--par-orange-700`, `--par-orange-800`, `--par-orange-900`, `--par-orange-950` |
+| **blue**   | `--par-blue-0`, `--par-blue-50`, `--par-blue-100`, `--par-blue-200`, `--par-blue-300`, `--par-blue-400`, `--par-blue-500`, `--par-blue-600`, `--par-blue-700`, `--par-blue-800`, `--par-blue-900`, `--par-blue-950`                         |
+| **lime**   | `--par-lime-0`, `--par-lime-50`, `--par-lime-100`, `--par-lime-200`, `--par-lime-300`, `--par-lime-400`, `--par-lime-500`, `--par-lime-600`, `--par-lime-700`, `--par-lime-800`, `--par-lime-900`, `--par-lime-950`                         |
+| **violet** | `--par-violet-0`, `--par-violet-50`, `--par-violet-100`, `--par-violet-200`, `--par-violet-300`, `--par-violet-400`, `--par-violet-500`, `--par-violet-600`, `--par-violet-700`, `--par-violet-800`, `--par-violet-900`, `--par-violet-950` |
+| **cyan**   | `--par-cyan-0`, `--par-cyan-50`, `--par-cyan-100`, `--par-cyan-200`, `--par-cyan-300`, `--par-cyan-400`, `--par-cyan-500`, `--par-cyan-600`, `--par-cyan-700`, `--par-cyan-800`, `--par-cyan-900`, `--par-cyan-950`                         |
+| **red**    | `--par-red-0`, `--par-red-50`, `--par-red-100`, `--par-red-200`, `--par-red-300`, `--par-red-400`, `--par-red-500`, `--par-red-600`, `--par-red-700`, `--par-red-800`, `--par-red-900`, `--par-red-950`                                     |
+| **yellow** | `--par-yellow-0`, `--par-yellow-50`, `--par-yellow-100`, `--par-yellow-200`, `--par-yellow-300`, `--par-yellow-400`, `--par-yellow-500`, `--par-yellow-600`, `--par-yellow-700`, `--par-yellow-800`, `--par-yellow-900`, `--par-yellow-950` |
+| **green**  | `--par-green-0`, `--par-green-50`, `--par-green-100`, `--par-green-200`, `--par-green-300`, `--par-green-400`, `--par-green-500`, `--par-green-600`, `--par-green-700`, `--par-green-800`, `--par-green-900`, `--par-green-950`             |
 
 ## References
 
